[gd_scene load_steps=145 format=2]

[ext_resource path="res://gfx/zombie_01/idle/idle0006.png" type="Texture" id=1]
[ext_resource path="res://gfx/zombie_01/idle/idle0025.png" type="Texture" id=2]
[ext_resource path="res://gfx/zombie_01/idle/idle0003.png" type="Texture" id=3]
[ext_resource path="res://gfx/zombie_01/idle/idle0008.png" type="Texture" id=4]
[ext_resource path="res://gfx/zombie_01/walk/walk0001.png" type="Texture" id=5]
[ext_resource path="res://gfx/zombie_01/walk/walk0018.png" type="Texture" id=6]
[ext_resource path="res://gfx/zombie_01/walk/walk0020.png" type="Texture" id=7]
[ext_resource path="res://gfx/zombie_01/walk/walk0019.png" type="Texture" id=8]
[ext_resource path="res://gfx/zombie_01/walk/walk0021.png" type="Texture" id=9]
[ext_resource path="res://gfx/zombie_01/walk/walk0023.png" type="Texture" id=10]
[ext_resource path="res://gfx/zombie_01/walk/walk0022.png" type="Texture" id=11]
[ext_resource path="res://gfx/zombie_01/walk/walk0026.png" type="Texture" id=12]
[ext_resource path="res://gfx/zombie_01/walk/walk0024.png" type="Texture" id=13]
[ext_resource path="res://gfx/zombie_01/walk/walk0025.png" type="Texture" id=14]
[ext_resource path="res://gfx/zombie_01/walk/walk0027.png" type="Texture" id=15]
[ext_resource path="res://gfx/zombie_01/walk/walk0029.png" type="Texture" id=16]
[ext_resource path="res://gfx/zombie_01/walk/walk0028.png" type="Texture" id=17]
[ext_resource path="res://gfx/zombie_01/idle/idle0001.png" type="Texture" id=18]
[ext_resource path="res://gfx/zombie_01/idle/idle0002.png" type="Texture" id=19]
[ext_resource path="res://gfx/zombie_01/walk/walk0000.png" type="Texture" id=20]
[ext_resource path="res://gfx/zombie_01/idle/idle0007.png" type="Texture" id=21]
[ext_resource path="res://gfx/zombie_01/idle/idle0005.png" type="Texture" id=22]
[ext_resource path="res://gfx/zombie_01/idle/idle0004.png" type="Texture" id=23]
[ext_resource path="res://gfx/zombie_01/walk/walk0002.png" type="Texture" id=24]
[ext_resource path="res://gfx/zombie_01/idle/idle0010.png" type="Texture" id=25]
[ext_resource path="res://gfx/zombie_01/idle/idle0009.png" type="Texture" id=26]
[ext_resource path="res://gfx/zombie_01/walk/walk0008.png" type="Texture" id=27]
[ext_resource path="res://gfx/zombie_01/walk/walk0006.png" type="Texture" id=28]
[ext_resource path="res://gfx/zombie_01/idle/idle0000.png" type="Texture" id=29]
[ext_resource path="res://gfx/zombie_01/idle/idle0014.png" type="Texture" id=30]
[ext_resource path="res://gfx/zombie_01/idle/idle0011.png" type="Texture" id=31]
[ext_resource path="res://gfx/zombie_01/idle/idle0012.png" type="Texture" id=32]
[ext_resource path="res://gfx/zombie_01/idle/idle0017.png" type="Texture" id=33]
[ext_resource path="res://gfx/zombie_01/idle/idle0016.png" type="Texture" id=34]
[ext_resource path="res://gfx/zombie_01/idle/idle0013.png" type="Texture" id=35]
[ext_resource path="res://gfx/zombie_01/idle/idle0019.png" type="Texture" id=36]
[ext_resource path="res://gfx/zombie_01/idle/idle0015.png" type="Texture" id=37]
[ext_resource path="res://gfx/zombie_01/idle/idle0018.png" type="Texture" id=38]
[ext_resource path="res://gfx/zombie_01/idle/idle0022.png" type="Texture" id=39]
[ext_resource path="res://gfx/zombie_01/idle/idle0020.png" type="Texture" id=40]
[ext_resource path="res://gfx/zombie_01/idle/idle0021.png" type="Texture" id=41]
[ext_resource path="res://gfx/zombie_01/idle/idle0023.png" type="Texture" id=42]
[ext_resource path="res://gfx/zombie_01/idle/idle0024.png" type="Texture" id=43]
[ext_resource path="res://gfx/zombie_01/idle/idle0026.png" type="Texture" id=44]
[ext_resource path="res://gfx/zombie_01/idle/idle0027.png" type="Texture" id=45]
[ext_resource path="res://gfx/zombie_01/idle/idle0028.png" type="Texture" id=46]
[ext_resource path="res://gfx/zombie_01/idle/idle0029.png" type="Texture" id=47]
[ext_resource path="res://gfx/zombie_01/walk/walk0003.png" type="Texture" id=48]
[ext_resource path="res://gfx/zombie_01/idle/idle0030.png" type="Texture" id=49]
[ext_resource path="res://gfx/zombie_01/idle/idle0031.png" type="Texture" id=50]
[ext_resource path="res://gfx/zombie_01/walk/walk0004.png" type="Texture" id=51]
[ext_resource path="res://gfx/zombie_01/walk/walk0005.png" type="Texture" id=52]
[ext_resource path="res://gfx/zombie_01/walk/walk0007.png" type="Texture" id=53]
[ext_resource path="res://gfx/zombie_01/walk/walk0011.png" type="Texture" id=54]
[ext_resource path="res://gfx/zombie_01/walk/walk0010.png" type="Texture" id=55]
[ext_resource path="res://gfx/zombie_01/walk/walk0009.png" type="Texture" id=56]
[ext_resource path="res://gfx/zombie_01/walk/walk0012.png" type="Texture" id=57]
[ext_resource path="res://gfx/zombie_01/walk/walk0014.png" type="Texture" id=58]
[ext_resource path="res://gfx/zombie_01/walk/walk0013.png" type="Texture" id=59]
[ext_resource path="res://gfx/zombie_01/walk/walk0016.png" type="Texture" id=60]
[ext_resource path="res://gfx/zombie_01/walk/walk0015.png" type="Texture" id=61]
[ext_resource path="res://gfx/zombie_01/walk/walk0017.png" type="Texture" id=62]
[ext_resource path="res://gfx/zombie_01/walk/walk0030.png" type="Texture" id=63]
[ext_resource path="res://gfx/zombie_01/walk/walk0031.png" type="Texture" id=64]
[ext_resource path="res://src/Zombie.gd" type="Script" id=65]
[ext_resource path="res://gfx/zombie_01/death01/death01_0008.png" type="Texture" id=66]
[ext_resource path="res://gfx/zombie_01/death01/death01_0010.png" type="Texture" id=67]
[ext_resource path="res://gfx/zombie_01/death01/death01_0009.png" type="Texture" id=68]
[ext_resource path="res://gfx/zombie_01/death01/death01_0014.png" type="Texture" id=69]
[ext_resource path="res://gfx/zombie_01/death01/death01_0004.png" type="Texture" id=70]
[ext_resource path="res://gfx/zombie_01/death01/death01_0007.png" type="Texture" id=71]
[ext_resource path="res://gfx/zombie_01/death01/death01_0013.png" type="Texture" id=72]
[ext_resource path="res://gfx/zombie_01/death01/death01_0000.png" type="Texture" id=73]
[ext_resource path="res://gfx/zombie_01/death01/death01_0012.png" type="Texture" id=74]
[ext_resource path="res://gfx/zombie_01/death01/death01_0011.png" type="Texture" id=75]
[ext_resource path="res://gfx/zombie_01/death01/death01_0016.png" type="Texture" id=76]
[ext_resource path="res://gfx/zombie_01/death01/death01_0005.png" type="Texture" id=77]
[ext_resource path="res://gfx/zombie_01/death01/death01_0002.png" type="Texture" id=78]
[ext_resource path="res://gfx/zombie_01/death01/death01_0015.png" type="Texture" id=79]
[ext_resource path="res://gfx/zombie_01/death01/death01_0006.png" type="Texture" id=80]
[ext_resource path="res://gfx/zombie_01/death01/death01_0003.png" type="Texture" id=81]
[ext_resource path="res://gfx/zombie_01/death01/death01_0001.png" type="Texture" id=82]
[ext_resource path="res://sfx/180409__jaraxe__zombie5.wav" type="AudioStream" id=83]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0002.png" type="Texture" id=84]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0004.png" type="Texture" id=85]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0003.png" type="Texture" id=86]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0005.png" type="Texture" id=87]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0007.png" type="Texture" id=88]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0006.png" type="Texture" id=89]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0003.png" type="Texture" id=90]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0002.png" type="Texture" id=91]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0001.png" type="Texture" id=92]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0008.png" type="Texture" id=93]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0009.png" type="Texture" id=94]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0000.png" type="Texture" id=95]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0005.png" type="Texture" id=96]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0007.png" type="Texture" id=97]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0006.png" type="Texture" id=98]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0004.png" type="Texture" id=99]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0011.png" type="Texture" id=100]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0012.png" type="Texture" id=101]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0010.png" type="Texture" id=102]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0000.png" type="Texture" id=103]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0018.png" type="Texture" id=104]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0017.png" type="Texture" id=105]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0019.png" type="Texture" id=106]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0017.png" type="Texture" id=107]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0016.png" type="Texture" id=108]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0018.png" type="Texture" id=109]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0019.png" type="Texture" id=110]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0012.png" type="Texture" id=111]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0011.png" type="Texture" id=112]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0013.png" type="Texture" id=113]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0014.png" type="Texture" id=114]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0015.png" type="Texture" id=115]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0016.png" type="Texture" id=116]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0008.png" type="Texture" id=117]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0009.png" type="Texture" id=118]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0010.png" type="Texture" id=119]
[ext_resource path="res://gfx/zombie_01/attack02/attack02_0001.png" type="Texture" id=120]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0013.png" type="Texture" id=121]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0015.png" type="Texture" id=122]
[ext_resource path="res://gfx/zombie_01/attack01/attack01_0014.png" type="Texture" id=123]
[ext_resource path="res://gfx/zombie_01/death02/death02_0009.png" type="Texture" id=124]
[ext_resource path="res://gfx/zombie_01/death02/death02_0008.png" type="Texture" id=125]
[ext_resource path="res://gfx/zombie_01/death02/death02_0013.png" type="Texture" id=126]
[ext_resource path="res://gfx/zombie_01/death02/death02_0005.png" type="Texture" id=127]
[ext_resource path="res://gfx/zombie_01/death02/death02_0011.png" type="Texture" id=128]
[ext_resource path="res://gfx/zombie_01/death02/death02_0001.png" type="Texture" id=129]
[ext_resource path="res://gfx/zombie_01/death02/death02_0006.png" type="Texture" id=130]
[ext_resource path="res://gfx/zombie_01/death02/death02_0014.png" type="Texture" id=131]
[ext_resource path="res://gfx/zombie_01/death02/death02_0015.png" type="Texture" id=132]
[ext_resource path="res://gfx/zombie_01/death02/death02_0012.png" type="Texture" id=133]
[ext_resource path="res://gfx/zombie_01/death02/death02_0016.png" type="Texture" id=134]
[ext_resource path="res://gfx/zombie_01/death02/death02_0010.png" type="Texture" id=135]
[ext_resource path="res://gfx/zombie_01/death02/death02_0004.png" type="Texture" id=136]
[ext_resource path="res://gfx/zombie_01/death02/death02_0007.png" type="Texture" id=137]
[ext_resource path="res://gfx/zombie_01/death02/death02_0000.png" type="Texture" id=138]
[ext_resource path="res://gfx/zombie_01/death02/death02_0003.png" type="Texture" id=139]
[ext_resource path="res://gfx/zombie_01/death02/death02_0002.png" type="Texture" id=140]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 1 ), ExtResource( 21 ), ExtResource( 4 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 2 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "idle",
"speed": 30.0
}, {
"frames": [ ExtResource( 95 ), ExtResource( 92 ), ExtResource( 91 ), ExtResource( 90 ), ExtResource( 99 ), ExtResource( 96 ), ExtResource( 98 ), ExtResource( 97 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 102 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 121 ), ExtResource( 123 ), ExtResource( 122 ), ExtResource( 108 ), ExtResource( 107 ), ExtResource( 109 ), ExtResource( 110 ) ],
"loop": true,
"name": "attack01",
"speed": 30.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 48 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 28 ), ExtResource( 53 ), ExtResource( 27 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "walk",
"speed": 30.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 82 ), ExtResource( 78 ), ExtResource( 81 ), ExtResource( 70 ), ExtResource( 77 ), ExtResource( 80 ), ExtResource( 71 ), ExtResource( 66 ), ExtResource( 68 ), ExtResource( 67 ), ExtResource( 75 ), ExtResource( 74 ), ExtResource( 72 ), ExtResource( 69 ), ExtResource( 79 ), ExtResource( 76 ) ],
"loop": true,
"name": "die0",
"speed": 30.0
}, {
"frames": [ ExtResource( 138 ), ExtResource( 129 ), ExtResource( 140 ), ExtResource( 139 ), ExtResource( 136 ), ExtResource( 127 ), ExtResource( 130 ), ExtResource( 137 ), ExtResource( 125 ), ExtResource( 124 ), ExtResource( 135 ), ExtResource( 128 ), ExtResource( 133 ), ExtResource( 126 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 134 ) ],
"loop": true,
"name": "die1",
"speed": 30.0
}, {
"frames": [ ExtResource( 103 ), ExtResource( 120 ), ExtResource( 84 ), ExtResource( 86 ), ExtResource( 85 ), ExtResource( 87 ), ExtResource( 89 ), ExtResource( 88 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 112 ), ExtResource( 111 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 105 ), ExtResource( 104 ), ExtResource( 106 ) ],
"loop": true,
"name": "attack02",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.722
height = 10.5561

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="CircleShape2D" id=4]
radius = 20.3961

[node name="Zombie" type="KinematicBody2D" groups=[
"fragile",
"pushable",
]]
rotation = 0.15708
scale = Vector2( 2, 2 )
script = ExtResource( 65 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die0"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Sense" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sense"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BoredTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 83 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -8.39397, -5.00591 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Sense" to="." method="_on_Sense_body_entered"]
[connection signal="timeout" from="BoredTimer" to="." method="_on_BoredTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
